modify selenium guide